Fixed bug with nav buttons not updating active class. Fixed JSHint warnings. Fixed Grunt build issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 body {
   padding: 0;
+  overflow-y: scroll; // to prevent screen jumping when certain days are selected
 }
 
 /* Everything gets side spacing for mobile first views */
